{{$NEXT}}

3.003     2019-10-01 15:49:43 EDT
  - Increase DBD::SQLite dependency to 1.64 to support configuring
    double-quoted string literals.
  - Disable double-quoted string literals for all connections.
    https://www.sqlite.org/quirks.html#double_quoted_string_literals_are_accepted
  - Change default SQL::Abstract identifier back to double quote.

3.002     2019-06-21 17:41:35 EDT
  - Changed default SQL::Abstract identifier quoting character to `, as double
    quoted identifiers may be interpreted as string literals if they are not
    valid identifiers. https://www.sqlite.org/quirks.html#double_quoted_string_literals_are_accepted

3.001     2018-07-20 20:25:12 EDT
  - Increase DBD::SQLite dependency to 1.54 for FTS5 support.
  - Add db attribute to Mojo::SQLite::Results and use it to prevent connections
    from being cached for reuse while results are active.
  - Add sql_for method to Mojo::SQLite::Migrations.

3.000     2017-07-20 01:16:50 EDT
  - Changed default for max_connections attribute to 1.
  - Added support for sharing the database connection cache between multiple
    Mojo::SQLite objects. (based on Mojo::Pg 4.0)
  - Added parent attribute to Mojo::SQLite.
  - Fixed database connection leak with automatic migrations.
  - Removed deprecated Mojo::SQLite::PubSub and associated methods and attributes.
    SQLite's serverless nature means it does not have the ability to support
    client notifications, so it is not possible to implement an efficient
    pubsub system as in for example PostgreSQL, Redis, or websockets.

2.002     2017-06-01 14:16:34 EDT
  - Add no_wal option to prevent enabling WAL mode on connection.

2.001     2017-02-18 15:36:16 EST
  - Set name_sep in default SQL::Abstract object to support proper quoting of
    table and column names.

2.000     2017-02-11 17:03:53 EST
  - Add support for generating queries with SQL::Abstract. (based on Mojo::Pg 3.0)
  - Add abstract attribute to Mojo::SQLite.