@@ -4,7 +4,7 @@ requires 'DBI'             => '1.627';
 requires 'DBD::SQLite'     => '1.64'; # for JSON1, FTS5, DQS
 requires 'File::Spec::Functions';
 requires 'File::Temp';
-requires 'Mojolicious'     => '7.32';
+requires 'Mojolicious'     => '8.03';
 requires 'Scalar::Util';
 requires 'SQL::Abstract'   => '1.81';
 requires 'URI'             => '1.69';
