@@ -2,6 +2,7 @@ use Mojo::Base -strict;
 
 use Test::More;
 use Mojo::SQLite;
+use Mojo::IOLoop;
 
 package MojoSQLiteTest::Database;
 use Mojo::Base 'Mojo::SQLite::Database';
